if ( "${ASHES_BUILD_RENDERER_PLUGINS}" STREQUAL "" )
	set( ASHES_BUILD_RENDERER_PLUGINS TRUE )
endif ()

if ( "${ASHES_BUILD_RENDERER_PLUGINS}" STREQUAL "TRUE" )
	option( ASHES_BUILD_PLUGINS "Build renderers plugins" ON )
else ()
	option( ASHES_BUILD_PLUGINS "Build renderers plugins" OFF )
endif ()

if ( MSVC )
	add_definitions( -D_ENFORCE_MATCHING_ALLOCATORS=0 )
endif ()

set( ASHES_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR} )
set( ASHES_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR} )
set( SPIRV_CROSS_DIR ${ASHES_SOURCE_DIR}/../external/SPIRV-Cross )

add_subdirectory( Ashes )

if ( ASHES_BUILD_PLUGINS )
	if ( "${ASHES_STATIC_RENDERER_PLUGINS}" STREQUAL "" )
		set( ASHES_STATIC_RENDERER_PLUGINS FALSE )
	endif ()

	if ( "${ASHES_STATIC_RENDERER_PLUGINS}" STREQUAL "TRUE" )
		option( ASHES_STATIC_RENDERERS "Build renderers as static libraries" ON )
	else ()
		option( ASHES_STATIC_RENDERERS "Build renderers as static libraries" OFF )
	endif ()

	add_subdirectory( Gl4Renderer )
	add_subdirectory( Gl3Renderer )
	add_subdirectory( TestRenderer )
	add_subdirectory( VkRenderer )
	if ( WIN32 )
		add_subdirectory( D3D11Renderer )
	endif ()
	set( ENABLED_RENDERERS ${ENABLED_RENDERERS} PARENT_SCOPE )
endif ()
